user 与视频 模块init
